# rewriting-parser

./: README.md  cabal.project  csrs-check.sh  csrs-syntax-checker.cabal  rew-check.sh  rewriting-parser.cabal
examples/: 15.ari  31.ari  accept-inf1.trs  accept-inf2.trs  accept1.ari  accept1.trs  accept2.ari  accept2.trs  accept3.ari  accept4.ari  csr-example1.trs  csr-example2.trs  reject1.trs  reject2.trs  reject3.trs  reject4.trs
src/: Main.hs
src/Interface/: CLI.hs  RewParserLibrary.hs
src/Parser/ARI/: Parser.hs
src/Parser/ARI/TRS/: Parser.hs  Scanner.hs
src/Parser/COPS/: Parser.hs
src/Parser/COPS/SRS/: Grammar.hs  Parser.hs  Scanner.hs
src/Parser/COPS/TRS/: Grammar.hs  Parser.hs  Scanner.hs
src/Parser/TRS/: Grammar.hs  Properties.hs
