name:	rewriting-parser
version: 	0.2
cabal-version:	>= 1.2
description: 	A tool for checking CS-TRSs and CS-CTRSs format 
license-file: 	LICENSE
copyright:
author:	Raul Gutierrez
maintainer:	raguti@upv.es
build-type:	Simple
stability:
homepage:	
package-url:
synopsis:
category:
tested-with:

Library
  exposed-modules:
    Interface.RewParserLibrary
  other-modules: 
    Interface.CLI
    Parser.TRS.Grammar
    Parser.TRS.Properties
    Parser.COPS.Parser
    Parser.COPS.TRS.Parser
    Parser.COPS.TRS.Scanner
    Parser.ARI.Parser
    Parser.ARI.TRS.Parser
    Parser.ARI.TRS.Scanner
  build-depends: 	base > 4, pretty, parsec, syb, containers, mtl, multiset
  hs-source-dirs: 	src
  ghc-options: -O2
  extensions: 

Executable rew-check
  buildable: True
  main-is: Main.hs
  other-modules: 
    Interface.CLI
    Parser.TRS.Grammar
    Parser.TRS.Properties
    Parser.COPS.Parser
    Parser.COPS.TRS.Parser
    Parser.COPS.TRS.Scanner
    Parser.ARI.Parser
    Parser.ARI.TRS.Parser
    Parser.ARI.TRS.Scanner
  build-depends: 	base > 4, pretty, parsec, syb, containers, mtl, multiset
  hs-source-dirs: 	src
  ghc-options: -O2 -threaded
  extensions: 
